--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,3 +1,15 @@
-.heading {
-  color: blueviolet;
+@import url("./__project-name/header__project-name.css");
+@import url("./__menu/header__menu.css");
+@import url("./__menu-item/header__menu-item.css");
+
+.header {
+  max-width: 1440px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
 }
