--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,2 +1,8 @@
 @import url(../vendor/normalize.css);
+@import url(../vendor/fonts.css);
 @import url(../blocks/header/header.css);
+@import url(../blocks/serch/serch.css);
+
+/* header, h1, h2, h3, div, article, li, ul, form {
+  border: 1px solid blue;
+} */
