--- a/src/blocks/serch/__searchbar/serch__searchbar.css
+++ b/src/blocks/serch/__searchbar/serch__searchbar.css
@@ -1,5 +1,7 @@
 .serch__searchbar {
   position: relative;
+  display: flex;
+  flex-direction: row;
   width: 610px;
   height: 64px;
   background-color: #ffffff;
