--- a/src/blocks/serch/__input/search__input.css
+++ b/src/blocks/serch/__input/search__input.css
@@ -1,4 +1,13 @@
 .search__input {
   border-radius: 45px;
   border: 0;
+  width: 65%;
+  margin-left: 24px;
+  outline: none;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 22px;
+  color: #1A1B22;
 }
