--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,10 +1,12 @@
 @import url("./__project-name/header__project-name.css");
 @import url("./__menu/header__menu.css");
-@import url("./__menu-item/header__link.css");
+@import url("./__link/header__link.css");
 @import url("./__item/header__item.css");
+@import url("./_color_white/header_color_white.css");
+@import url("./__link/_color_white/header__link_color_white.css");
+@import url("./__project-name/_color_white/header__project-name_color_white.css");
 
 .header {
-  background-image: url(/src/images/bg.png);
   max-width: 1440px;
   position: absolute;
   left: 0;
