--- a/src/blocks/about-author/__text/about-author__text.css
+++ b/src/blocks/about-author/__text/about-author__text.css
@@ -1,10 +1,9 @@
-.serch__subtitle {
-  max-width: 608px;
+.about-author__text {
   font-family: roboto;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 24px;
-  color: #FFFFFF;
-  margin: 0 auto 64px auto;
+  color: #1A1B22;
+  margin: 0;
 }
