сверстал блок Результаты поиска

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -4,6 +4,7 @@
 @import url(../blocks/serch/serch.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/about-author/about-author.css);
+@import url(../blocks/serch-result/serch-result.css);
 
 /* header, h1, h2, h3, div, article, li, ul, form, img {
   border: 1px solid blue;
