--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -7,10 +7,20 @@
   font-weight: 500;
   font-size: 18px;
   line-height: 24px;
+  color: #B6BCBF;
   margin-left: 0;
   padding-bottom: 23px;
 }
 
 .header__link:first-child {
   margin-right: 34px;
+}
+
+.header__link:hover {
+  border-bottom: 3px solid #FFFFFF;
+}
+
+.header__link.active {  
+  color: #FFFFFF;
+  border-bottom: 3px solid #FFFFFF;
 }
