--- a/src/blocks/header/_color_white/header_color_white.css
+++ b/src/blocks/header/_color_white/header_color_white.css
@@ -1,3 +1,7 @@
-.header_color_white {
-  background-image: url(/src/images/bg.png);
+.header_color_white {  
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  box-shadow: inset 0px -1px 0px #f9f9f9;  
 }
