--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -2,18 +2,15 @@
 @import url("./__menu/header__menu.css");
 @import url("./__link/header__link.css");
 @import url("./__item/header__item.css");
+@import url("./__project-name/_color_black/header__project-name_color_black.css");
+@import url("./__link/_color_black/header__link_color_black.css");
 @import url("./_color_white/header_color_white.css");
-@import url("./__link/_color_white/header__link_color_white.css");
-@import url("./__project-name/_color_white/header__project-name_color_white.css");
 
 .header {
   max-width: 1440px;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
+  box-shadow: inset 0px -1px 0px #D1D2D6;
 }
