--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -4,3 +4,5 @@
 @import url(../blocks/about-author/about-author.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/for-clients/for-clients.css);
+@import url(../blocks/technology/technology.css);
+@import url(../blocks/history/history.css);
