--- a/src/blocks/analytics/__current-page/analytics__current-page.css
+++ b/src/blocks/analytics/__current-page/analytics__current-page.css
@@ -4,7 +4,6 @@
   font-weight: normal;
   font-size: 18px;
   line-height: 24px;
-  color: #1A1B22;
+  color: #B6BCBF;
   margin: 40px auto 0 104px;
-  text-decoration: none;
 }
