--- a/src/pages/statistics.css
+++ b/src/pages/statistics.css
@@ -3,3 +3,8 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/analytics/analytics.css);
+@import url(../blocks/tabel/tabel.css);
+
+/* header, h1, h2, h3, div, article, li, ul, form, img, p {
+  border: 1px solid red;
+} */
