--- a/src/blocks/tabel/__percent/tabel__percent.css
+++ b/src/blocks/tabel/__percent/tabel__percent.css
@@ -7,4 +7,7 @@
   letter-spacing: 0.4px;
   text-transform: uppercase;
   color: #FFFFFF;
+  display: flex;
+  align-items: center;
+  margin-left: 6px;
 }
