--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -5,6 +5,7 @@
 @import url("./__project-name/_color_black/header__project-name_color_black.css");
 @import url("./__link/_color_black/header__link_color_black.css");
 @import url("./_color_white/header_color_white.css");
+@import url("./__link/_no_underline/header__link_no_underline.css");
 
 .header {
   max-width: 1440px;
