--- a/src/blocks/serch/__button/search__button.css
+++ b/src/blocks/serch/__button/search__button.css
@@ -13,3 +13,12 @@
   font-size: 18px;
   cursor: pointer;
 }
+
+.search__button:hover {
+  background: #347EFF;
+}
+
+.search__button:focus {
+  background: #2A65CC;
+  outline: none;
+}
