--- a/src/blocks/about-author/about-author.css
+++ b/src/blocks/about-author/about-author.css
@@ -2,6 +2,7 @@
 @import url("./__description/about-author__description.css");
 @import url("./__title/about-author__title.css");
 @import url("./__text/about-author__text.css");
+@import url("./__avatar-container/about-author__avatar-container.css");
 
 .about-author {
   max-width: 1440px;
