--- a/src/blocks/serch-news/__loader/serch-news__loader.css
+++ b/src/blocks/serch-news/__loader/serch-news__loader.css
@@ -1,4 +1,19 @@
+@keyframes rotation {
+  from {
+    transform: rotate(360deg);
+  }
+
+  to {
+    transform: rotate(0deg);
+  }
+}
+
 .serch-news__loader {
   max-width: 100%;
   margin: 80px auto 0 auto;
+  animation: rotation;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: normal;
 }
