--- a/src/blocks/about-author/__description/about-author__description.css
+++ b/src/blocks/about-author/__description/about-author__description.css
@@ -2,5 +2,11 @@
   display: flex;
   flex-direction: column;
   max-width: 600px;
-  margin: 131px 216px auto auto;
+  margin: auto 216px auto auto;
+}
+
+@media screen and (max-width: 1024px) {
+	.about-author__description {
+    margin: auto 104px auto auto;
+  }
 }
