--- a/src/blocks/serch/__button/search__button.css
+++ b/src/blocks/serch/__button/search__button.css
@@ -22,3 +22,10 @@
   background: #2A65CC;
   outline: none;
 }
+
+@media screen and (max-width: 768px) {
+	.search__button {
+    height: 56px;
+    width: 160px;
+  }
+}
