--- a/src/blocks/serch/__subtitle/serch__subtitle.css
+++ b/src/blocks/serch/__subtitle/serch__subtitle.css
@@ -6,5 +6,12 @@
   font-size: 18px;
   line-height: 24px;
   color: #FFFFFF;
-  margin: 0 auto 64px auto;
+  margin: 0;
+  /* margin: 0 auto 64px auto; */
+}
+
+@media screen and (max-width: 768px) {
+	.serch__subtitle {
+    max-width: 452px;
+  }
 }
