--- a/src/blocks/serch/__title/serch__title.css
+++ b/src/blocks/serch/__title/serch__title.css
@@ -6,5 +6,14 @@
   font-size: 60px;
   line-height: 64px;
   color: #FFFFFF;
-  margin: 160px auto 32px auto;
+  margin: 0 auto 32px 0;
+}
+
+@media screen and (max-width: 768px) {
+  .serch__title {
+    max-width: 385px;
+    font-size: 36px;
+    line-height: 40px;
+    margin-bottom: 16px;
+  }
 }
