--- a/src/blocks/serch/serch.css
+++ b/src/blocks/serch/serch.css
@@ -3,13 +3,14 @@
 @import url("./__searchbar/serch__searchbar.css");
 @import url("./__input/search__input.css");
 @import url("./__button/search__button.css");
+@import url("./__container/serch__container.css");
 
 .serch {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   margin: 0 auto;
   background-image: url(/src/images/georgia-de-lotz-unsplash.png);  
+  background-size: cover;
   max-width: 1440px;
 }
