--- a/src/blocks/serch-result/__image/serch-result__image.css
+++ b/src/blocks/serch-result/__image/serch-result__image.css
@@ -1,3 +1,11 @@
 .serch-result__image {
   border-radius: 16px 16px 0 0;
+  width: 100%;
+  height: 272px;
+}
+
+@media screen and (max-width: 768px) {
+  .serch-result__image {
+    height: 150px;
+  }
 }
