--- a/src/blocks/serch-result/__news/serch-result__news.css
+++ b/src/blocks/serch-result/__news/serch-result__news.css
@@ -1,4 +1,5 @@
 .serch-result__news {
+  overflow:hidden;
   font-family: roboto;
   font-style: normal;
   font-weight: normal;
@@ -7,4 +8,11 @@
   color: #1A1B22;
   max-width: 352px;
   margin: 16px auto 0 auto;
+}
+
+@media screen and (max-width: 768px) {
+  .serch-result__news {
+    max-width: 192px;
+    max-height: 88px;
+  }
 }
