--- a/src/blocks/serch-result/__subtitle/serch-result__subtitle.css
+++ b/src/blocks/serch-result/__subtitle/serch-result__subtitle.css
@@ -8,3 +8,11 @@
   max-width: 352px;
   margin: 0 auto;
 }
+
+@media screen and (max-width: 768px) {
+  .serch-result__subtitle {
+    font-size: 22px;
+    line-height: 24px;
+    max-width: 192px;
+  }
+}
