--- a/src/blocks/serch-result/__news/serch-result__news.css
+++ b/src/blocks/serch-result/__news/serch-result__news.css
@@ -1,5 +1,6 @@
 .serch-result__news {
   overflow:hidden;
+  text-overflow: ellipsis;
   font-family: roboto;
   font-style: normal;
   font-weight: normal;
