--- a/src/blocks/about-author/__title/about-author__title.css
+++ b/src/blocks/about-author/__title/about-author__title.css
@@ -7,3 +7,11 @@
   color: #1A1B22;
   margin-bottom: 24px;
 }
+
+@media screen and (max-width: 768px) {
+  .about-author__title {
+    font-size: 30px;
+    line-height: 40px;
+    margin-bottom: 16px;
+  }
+}
