--- a/src/blocks/for-clients/for-clients.css
+++ b/src/blocks/for-clients/for-clients.css
@@ -6,3 +6,9 @@
   margin: 0 auto;
   padding-bottom: 94px;
 }
+
+@media screen and (max-width: 768px) {
+  .for-clients {
+    padding-bottom: 26px;
+  }
+}
