--- a/src/blocks/for-clients/__title/for-clients__title.css
+++ b/src/blocks/for-clients/__title/for-clients__title.css
@@ -7,3 +7,11 @@
   color: #1A1B22;
   margin: 80px auto 0 104px;
 }
+
+@media screen and (max-width: 768px) {
+  .for-clients__title {
+    font-size: 30px;
+    line-height: 34px;
+    margin: 16px auto 0 40px;
+  }
+}
