--- a/src/blocks/history/__author-mail/history__author-mail.css
+++ b/src/blocks/history/__author-mail/history__author-mail.css
@@ -7,3 +7,9 @@
   color: #1A1B22;
   margin: 4px 0 0 0;
 }
+
+@media screen and (max-width: 768px) {
+  .history__author-mail {
+    margin: 0;
+  }
+}
