--- a/src/blocks/history/__avatar/history__avatar.css
+++ b/src/blocks/history/__avatar/history__avatar.css
@@ -3,3 +3,11 @@
   height: 64px;
   margin: 0 16px 16px 24px;
 }
+
+@media screen and (max-width: 768px) {
+  .history__avatar {
+    width: 48px;
+    height: 48px;
+    margin: 0 12px 17px 24px;
+  }
+}
