--- a/src/blocks/history/__slider-control-right/history__slider-control-right.css
+++ b/src/blocks/history/__slider-control-right/history__slider-control-right.css
@@ -3,3 +3,9 @@
   top: 50%;
   right: 4px;
 }
+
+@media screen and (max-width: 768px) {
+  .history__slider-control-right {
+    display: none;
+  }
+}
