--- a/src/blocks/technology/__tech/technology__tech.css
+++ b/src/blocks/technology/__tech/technology__tech.css
@@ -13,3 +13,15 @@
 .technology__tech:first-child {
   margin-left: 178px;
 }
+
+@media screen and (max-width: 1280px) {
+  .technology__tech {
+    margin: 0 64px 40px 0;
+  }
+  .technology__tech:first-child {
+    margin-left: auto;
+  }
+  .technology__tech:last-child {
+    margin-right: auto;
+  }
+}
