--- a/src/blocks/technology/__title/technology__title.css
+++ b/src/blocks/technology/__title/technology__title.css
@@ -6,5 +6,13 @@
   font-size: 40px;
   line-height: 46px;
   color: #1A1B22;
-  margin: 80px auto 162px 104px;
+  margin: 80px 0 162px 104px;
+}
+
+@media screen and (max-width: 768px) {
+  .technology__title {
+    font-size: 30px;
+    line-height: 34px;
+    margin: 40px auto 40px 40px;
+  }
 }
