--- a/src/blocks/technology/technology.css
+++ b/src/blocks/technology/technology.css
@@ -2,6 +2,7 @@
 @import url('./__tech/technology__tech.css');
 @import url('./__subtitle/technology__subtitle.css');
 @import url('./__logo/technology__logo.css');
+@import url('./__container/technology__container.css');
 
 .technology {
   max-width: 1440px;
@@ -9,4 +10,10 @@
   background: #F5F6F7;
   display: flex;
   flex-direction: row;
+}
+
+@media screen and (max-width: 1280px) {
+  .technology {
+    flex-direction: column;
+  }
 }
