--- a/src/blocks/serch-result/__card/serch-result__card.css
+++ b/src/blocks/serch-result/__card/serch-result__card.css
@@ -1,4 +1,5 @@
-.serch-result__card {
+.serch-result__card {  
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   max-width: 400px;
