--- a/src/blocks/tabel/__item/tabel__item.css
+++ b/src/blocks/tabel/__item/tabel__item.css
@@ -1,4 +1,10 @@
 .tabel__item {
   display: flex;
+  flex-direction: row;
   align-items: center;
 }
+
+/* @media screen and (max-width: 768px) {
+  .tabel__item {
+  }
+} */
