--- a/src/blocks/tabel/__diagram/tabel__diagram.css
+++ b/src/blocks/tabel/__diagram/tabel__diagram.css
@@ -3,3 +3,9 @@
   flex-direction: column;
   margin: 16px 104px;
 }
+
+@media screen and (max-width: 768px) {
+  .tabel__diagram {
+    margin: 8px 40px 0 40px;
+  }
+}
