--- a/src/blocks/history/__card/history__card.css
+++ b/src/blocks/history/__card/history__card.css
@@ -1,4 +1,5 @@
 .history__card {
+  flex-shrink: 0;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -13,7 +14,7 @@
   margin-right: 0;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .history__card {
     width: 336px;
     height: 242px;
