--- a/src/blocks/history/__cardlist/history__cardlist.css
+++ b/src/blocks/history/__cardlist/history__cardlist.css
@@ -1,11 +1,12 @@
 .history__cardlist {
+  overflow: hidden;
   display: flex;
   flex-direction: row;
   margin: 64px 104px 0 104px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .history__cardlist {
-    margin: 40px auto 0 32px;
+    margin: 40px 0 0 32px;
   }
 }
