--- a/src/blocks/footer/__social/footer__social.css
+++ b/src/blocks/footer/__social/footer__social.css
@@ -11,3 +11,9 @@
     margin-right: 22px;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .footer__social {
+    margin: 65px 18px auto auto;
+  }
+}
