--- a/src/blocks/footer/__copyright/footer__copyright.css
+++ b/src/blocks/footer/__copyright/footer__copyright.css
@@ -13,3 +13,9 @@
     margin-left: 40px;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .footer__copyright {
+   margin: 40px auto 23px 16px;
+  }
+}
