--- a/src/blocks/footer/__nav-link/footer__nav-link.css
+++ b/src/blocks/footer/__nav-link/footer__nav-link.css
@@ -8,3 +8,9 @@
   text-align: center;
   color: #1A1B22;
 }
+
+@media screen and (max-width: 320px) {
+  .footer__nav-link {
+    line-height: 48px;
+  }
+}
