--- a/src/blocks/footer/__nav/footer__nav.css
+++ b/src/blocks/footer/__nav/footer__nav.css
@@ -2,7 +2,19 @@
   display: flex;
   flex-direction: row;
   list-style-type: none;
-  max-width: 406px;  
+  max-width: 406px;
   margin: 30px auto 28px auto;
   padding: 0;
+}
+
+@media screen and (max-width: 664px) {
+  .footer__nav {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .footer__nav {
+    margin: 53px auto 0 16px;
+  }
 }
