--- a/src/blocks/header/__menu/header__menu.css
+++ b/src/blocks/header/__menu/header__menu.css
@@ -9,3 +9,9 @@
     margin: 22px 42px 0 auto;
   }
 }
+
+@media screen and (max-width: 500px) {
+	.header__menu {
+    margin: 16px 14px 0 auto;
+  }
+}
