--- a/src/blocks/header/__project-name/header__project-name.css
+++ b/src/blocks/header/__project-name/header__project-name.css
@@ -1,17 +1,26 @@
 .header__project-name {
-  text-decoration:none;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
   font-family: robotoslab;
   font-style: normal;
   font-weight: bold;
   font-size: 20px;
   line-height: 24px;
   color: #FFFFFF;
-  margin: 30px auto 0 104px;
+  margin: 0 auto 0 104px;
   outline: none;
 }
 
 @media screen and (max-width: 768px) {
-	.header__project-name {
-    margin: 22px auto 0 40px;
+  .header__project-name {
+    margin: 0 auto 0 40px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .header__project-name {
+    font-size: 16px;
+    margin: 0 auto 0 16px;
   }
 }
