--- a/src/blocks/header/__menu/header__menu.css
+++ b/src/blocks/header/__menu/header__menu.css
@@ -1,7 +1,8 @@
 .header__menu {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: no-wrap;
   margin: 30px 101px 0 auto;
+  padding: 0;
 }
 
 @media screen and (max-width: 768px) {
