--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -29,5 +29,9 @@
   .header__link {
     font-size: 16px;
     padding-bottom: 13px;
+    margin-left: 25px;
+  }
+  .header__link:last-child {
+    margin-left: 11px;
   }
 }
