--- a/src/blocks/serch/__button/search__button.css
+++ b/src/blocks/serch/__button/search__button.css
@@ -12,6 +12,7 @@
   font-weight: 500;
   font-size: 18px;
   cursor: pointer;
+  padding: 0;
 }
 
 .search__button:hover {
@@ -24,8 +25,15 @@
 }
 
 @media screen and (max-width: 768px) {
-	.search__button {
+  .search__button {
     height: 56px;
     width: 160px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .search__button {
+    position: relative;
+    width: 288px;
   }
 }
