--- a/src/blocks/serch/__input/search__input.css
+++ b/src/blocks/serch/__input/search__input.css
@@ -1,7 +1,8 @@
 .search__input {
+  box-sizing: border-box;
   border-radius: 45px;
   border: 0;
-  width: 65%;
+  width: 100%;
   margin-left: 24px;
   outline: none;
   font-family: Roboto;
@@ -10,4 +11,15 @@
   font-size: 16px;
   line-height: 22px;
   color: #1A1B22;
+  margin: 0;
+  padding: 0 0 0 24px;
+}
+
+@media screen and (max-width: 500px) {
+  .search__input {
+    height: 56px;
+    width: 288px;
+    margin-bottom: 16px;
+    padding-left: 16px;
+  }
 }
