--- a/src/blocks/serch/__subtitle/serch__subtitle.css
+++ b/src/blocks/serch/__subtitle/serch__subtitle.css
@@ -7,11 +7,17 @@
   line-height: 24px;
   color: #FFFFFF;
   margin: 0;
-  /* margin: 0 auto 64px auto; */
 }
 
 @media screen and (max-width: 768px) {
-	.serch__subtitle {
+  .serch__subtitle {
     max-width: 452px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .serch__subtitle {
+    font-size: 20px;
+    line-height: 26px;
   }
 }
