serch result 320px

--- a/src/blocks/serch-result/__analytics/serch-result__analytics.css
+++ b/src/blocks/serch-result/__analytics/serch-result__analytics.css
@@ -17,3 +17,9 @@
     margin: 48px 66px 34px auto;
   }
 }
+
+@media screen and (max-width: 500px) {
+  .serch-result__analytics {
+    margin: 0 auto 36px 16px;
+  }
+}
