--- a/src/blocks/serch-result/__header/serch-result__header.css
+++ b/src/blocks/serch-result/__header/serch-result__header.css
@@ -7,3 +7,9 @@
   display: flex;
   flex-direction: row;
 }
+
+@media screen and (max-width: 500px) {
+  .serch-result__header {
+    flex-direction: column;
+  }
+}
