--- a/src/blocks/about-author/__avatar-container/about-author__avatar-container.css
+++ b/src/blocks/about-author/__avatar-container/about-author__avatar-container.css
@@ -10,3 +10,10 @@
     margin: 61px 32px 61px 40px;
   }
 }
+
+@media screen and (max-width: 640px) {
+  .about-author__avatar-container {
+    margin: 32px auto 24px auto;
+    max-width: 272px;
+  }
+}
