--- a/src/blocks/about-author/about-author.css
+++ b/src/blocks/about-author/about-author.css
@@ -10,3 +10,10 @@
   display: flex;
   flex-direction: row;
 }
+
+@media screen and (max-width: 640px) {
+  .about-author {
+    flex-direction: column;
+    justify-content: center;
+  }
+}
