--- a/src/blocks/for-clients/__text/for-clients__text.css
+++ b/src/blocks/for-clients/__text/for-clients__text.css
@@ -15,3 +15,9 @@
     margin: 16px 40px 0 40px;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .for-clients__text {
+    margin: 16px 16px 0 16px;
+  }
+}
