adaptive all done

--- a/src/blocks/analytics/__current-page/analytics__current-page.css
+++ b/src/blocks/analytics/__current-page/analytics__current-page.css
@@ -14,3 +14,9 @@
     margin: 32px auto 0 40px;
   }
 }
+
+@media screen and (max-width: 390px) {
+  .analytics__current-page {
+    display: none;
+  }
+}
