--- a/src/blocks/tabel/__date/tabel__date.css
+++ b/src/blocks/tabel/__date/tabel__date.css
@@ -1,5 +1,5 @@
 .tabel__date {
-  vertical-align:bottom;
+  vertical-align: bottom;
   width: 104px;
   font-family: roboto;
   font-style: normal;
@@ -8,4 +8,11 @@
   line-height: 80px;
   color: #1A1B22;
   margin: 0;
+}
+
+@media screen and (max-width: 390px) {
+  .tabel__date {
+    width: 80px;
+    line-height: 48px;
+  }
 }
