--- a/src/blocks/tabel/__diagram/tabel__diagram.css
+++ b/src/blocks/tabel/__diagram/tabel__diagram.css
@@ -9,3 +9,9 @@
     margin: 8px 40px 0 40px;
   }
 }
+
+@media screen and (max-width: 390px) {
+  .tabel__diagram {
+    margin: 8px 16px 0 16px;
+  }
+}
