--- a/src/blocks/tabel/__value-text/tabel__value-text.css
+++ b/src/blocks/tabel/__value-text/tabel__value-text.css
@@ -14,3 +14,10 @@
   max-width: 192px;
   margin-left: 44px;
 }
+
+@media screen and (max-width: 390px) {
+  .tabel__value-text:last-child {
+    max-width: 176px;
+    margin-left: 16px;
+  }
+}
