--- a/src/blocks/tabel/__value/tabel__value.css
+++ b/src/blocks/tabel/__value/tabel__value.css
@@ -9,3 +9,9 @@
     margin: 48px auto 0 40px;
   }
 }
+
+@media screen and (max-width: 390px) {
+  .tabel__value {
+    margin: 16px auto 0 16px;
+  }
+}
