--- a/src/blocks/about-author/__title/about-author__title.css
+++ b/src/blocks/about-author/__title/about-author__title.css
@@ -1,5 +1,5 @@
 .about-author__title {
-  font-family: robotoslab;
+  font-family: "robotoslab", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 40px;
