--- a/src/blocks/analytics/__result/analytics__result.css
+++ b/src/blocks/analytics/__result/analytics__result.css
@@ -1,5 +1,5 @@
 .analytics__result {
-  font-family: roboto;
+  font-family: "roboto", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
