--- a/src/blocks/history/__link-to-github/history__link-to-github.css
+++ b/src/blocks/history/__link-to-github/history__link-to-github.css
@@ -1,6 +1,6 @@
 .history__link-to-github {
   text-decoration: none;
-  font-family: roboto;
+  font-family: "roboto", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
