--- a/src/blocks/history/__title/history__title.css
+++ b/src/blocks/history/__title/history__title.css
@@ -1,6 +1,6 @@
 .history__title {
   max-width: 712px;
-  font-family: robotoslab;
+  font-family: "robotoslab", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 40px;
