--- a/src/blocks/serch/__title/serch__title.css
+++ b/src/blocks/serch/__title/serch__title.css
@@ -1,6 +1,6 @@
 .serch__title {
   max-width: 608px;
-  font-family: robotoslab;
+  font-family: "robotoslab", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 60px;
