--- a/src/blocks/tabel/__date/tabel__date.css
+++ b/src/blocks/tabel/__date/tabel__date.css
@@ -1,7 +1,7 @@
 .tabel__date {
   vertical-align: bottom;
   width: 104px;
-  font-family: roboto;
+  font-family: "roboto", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
