--- a/src/blocks/tabel/__scale-index/tabel__scale-index.css
+++ b/src/blocks/tabel/__scale-index/tabel__scale-index.css
@@ -1,5 +1,5 @@
 .tabel__scale-index {
-  font-family: roboto;
+  font-family: "roboto", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
