--- a/src/blocks/tabel/__value-text/tabel__value-text.css
+++ b/src/blocks/tabel/__value-text/tabel__value-text.css
@@ -1,6 +1,6 @@
 .tabel__value-text {
   max-width: 104px;
-  font-family: roboto;
+  font-family: "roboto", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
