--- a/src/blocks/about-author/__text/about-author__text.css
+++ b/src/blocks/about-author/__text/about-author__text.css
@@ -1,5 +1,5 @@
 .about-author__text {
-  font-family: roboto;
+  font-family: "roboto", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
