--- a/src/blocks/footer/__nav-link/footer__nav-link.css
+++ b/src/blocks/footer/__nav-link/footer__nav-link.css
@@ -1,6 +1,6 @@
 .footer__nav-link {
   text-decoration: none;
-  font-family: roboto;
+  font-family: "roboto", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
