--- a/src/blocks/for-clients/__text/for-clients__text.css
+++ b/src/blocks/for-clients/__text/for-clients__text.css
@@ -1,5 +1,5 @@
 .for-clients__text {
-  font-family: roboto;
+  font-family: "roboto", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
