--- a/src/blocks/for-clients/__title/for-clients__title.css
+++ b/src/blocks/for-clients/__title/for-clients__title.css
@@ -1,5 +1,5 @@
 .for-clients__title {
-  font-family: robotoslab;
+  font-family: "robotoslab", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 40px;
