--- a/src/blocks/header/__project-name/header__project-name.css
+++ b/src/blocks/header/__project-name/header__project-name.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   text-decoration: none;
-  font-family: robotoslab;
+  font-family: "robotoslab", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 20px;
