--- a/src/blocks/history/__author-name/history__author-name.css
+++ b/src/blocks/history/__author-name/history__author-name.css
@@ -1,5 +1,5 @@
 .history__author-name {
-  font-family: robotoslab;
+  font-family: "robotoslab", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 26px;
