--- a/src/blocks/history/__comment/history__comment.css
+++ b/src/blocks/history/__comment/history__comment.css
@@ -1,5 +1,5 @@
 .history__comment {
-  font-family: roboto;
+  font-family: "roboto", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
