--- a/src/blocks/history/__date/history__date.css
+++ b/src/blocks/history/__date/history__date.css
@@ -1,5 +1,5 @@
 .history__date {
-  font-family: roboto;
+  font-family: "roboto", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
