--- a/src/blocks/nothing-found/__subtitle/nothing-found__subtitle.css
+++ b/src/blocks/nothing-found/__subtitle/nothing-found__subtitle.css
@@ -1,5 +1,5 @@
 .nothing-found__subtitle {
-  font-family: roboto;
+  font-family: "roboto", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
