--- a/src/blocks/nothing-found/__title/nothing-found__title.css
+++ b/src/blocks/nothing-found/__title/nothing-found__title.css
@@ -1,5 +1,5 @@
 .nothing-found__title {
-  font-family: robotoslab;
+  font-family: "robotoslab", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 26px;
