--- a/src/blocks/serch-news/__text/serch-news__text.css
+++ b/src/blocks/serch-news/__text/serch-news__text.css
@@ -1,5 +1,5 @@
 .serch-news__text {
-  font-family: roboto;
+  font-family: "roboto", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
