--- a/src/blocks/serch-result/__analytics/serch-result__analytics.css
+++ b/src/blocks/serch-result/__analytics/serch-result__analytics.css
@@ -1,6 +1,6 @@
 .serch-result__analytics {
   text-decoration: none;
-  font-family: roboto;
+  font-family: "roboto", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
