--- a/src/blocks/serch-result/__button-more/serch-result__button-more.css
+++ b/src/blocks/serch-result/__button-more/serch-result__button-more.css
@@ -5,7 +5,7 @@
   height: 64px;
   border: none;
   margin: 64px auto 80px auto;
-  font-family: roboto;
+  font-family: "roboto", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
