--- a/src/blocks/serch-result/__date/serch-result__date.css
+++ b/src/blocks/serch-result/__date/serch-result__date.css
@@ -1,5 +1,5 @@
 .serch-result__date {
-  font-family: sourcesanspro;
+  font-family: "sourcesanspro", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
