--- a/src/blocks/serch-result/__news/serch-result__news.css
+++ b/src/blocks/serch-result/__news/serch-result__news.css
@@ -3,7 +3,7 @@
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;  
   overflow: hidden;
-  font-family: roboto;
+  font-family: "roboto", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
