--- a/src/blocks/serch-result/__source/serch-result__source.css
+++ b/src/blocks/serch-result/__source/serch-result__source.css
@@ -1,5 +1,5 @@
 .serch-result__source {
-  font-family: robotoslab;
+  font-family: "robotoslab", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
