--- a/src/blocks/serch-result/__subtitle/serch-result__subtitle.css
+++ b/src/blocks/serch-result/__subtitle/serch-result__subtitle.css
@@ -1,5 +1,5 @@
 .serch-result__subtitle {
-  font-family: robotoslab;
+  font-family: "robotoslab", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 26px;
