--- a/src/blocks/serch/__button/search__button.css
+++ b/src/blocks/serch/__button/search__button.css
@@ -7,7 +7,7 @@
   border-radius: 45px;
   color: #ffffff;
   background-color: #2F71E5;
-  font-family: Roboto;
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
