--- a/src/blocks/serch/__input/search__input.css
+++ b/src/blocks/serch/__input/search__input.css
@@ -4,8 +4,7 @@
   border: 0;
   width: 100%;
   margin-left: 24px;
-  outline: none;
-  font-family: Roboto;
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
