--- a/src/blocks/serch/__subtitle/serch__subtitle.css
+++ b/src/blocks/serch/__subtitle/serch__subtitle.css
@@ -1,6 +1,6 @@
 .serch__subtitle {
   max-width: 608px;
-  font-family: roboto;
+  font-family: "roboto", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
