--- a/src/blocks/tabel/__percent/tabel__percent.css
+++ b/src/blocks/tabel/__percent/tabel__percent.css
@@ -1,5 +1,5 @@
 .tabel__percent {
-  font-family: roboto;
+  font-family: "roboto", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 12px;
