--- a/src/blocks/technology/__title/technology__title.css
+++ b/src/blocks/technology/__title/technology__title.css
@@ -1,6 +1,6 @@
 .technology__title {
   max-width: 344px;
-  font-family: robotoslab;
+  font-family: "robotoslab", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 40px;
