--- a/src/blocks/serch-result/__card/serch-result__card.css
+++ b/src/blocks/serch-result/__card/serch-result__card.css
@@ -2,7 +2,7 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  max-width: 400px;
+  width: 100%;
   height: 576px;
   background-color: #ffffff;
   border-radius: 16px;
@@ -10,14 +10,14 @@
 
 @media screen and (max-width: 768px) {
   .serch-result__card {
-    max-width: 224px;
+    /* max-width: 224px; */
     height: 420px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .serch-result__card {
-    max-width: 288px;
+    /* max-width: 288px; */
     height: 446px;
   }
 
