--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -13,3 +13,9 @@
   flex-wrap: wrap-reverse;
   margin: 0 auto;
 }
+
+@media screen and (max-width: 500px) {
+  .footer {
+    flex-direction: column-reverse;
+  }
+}
