--- a/src/blocks/serch-result/__title/serch-result__title.css
+++ b/src/blocks/serch-result/__title/serch-result__title.css
@@ -5,7 +5,7 @@
   font-size: 40px;
   line-height: 46px;
   color: #1A1B22;
-  margin: 80px auto 64px 0;
+  margin: 80px auto 64px 104px;
 }
 
 @media screen and (max-width: 768px) {
