--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -7,3 +7,5 @@
 @import url(../blocks/serch-result/serch-result.css);
 @import url(../blocks/serch-news/serch-news.css);
 @import url(../blocks/nothing-found/nothing-found.css);
+@import url(../blocks/hiden/hiden.css);
+@import url(../blocks/error/error.css);
